website/assets/css/style.css
/* ... */
.icons-list a {
	background-color: #120938;
	width: 145px;
	height: 145px;
	flex: 0 0 145px;
	max-width: 145px;
	gap: 30px;
	color: #fff;
	text-decoration: none;
}

.icons-list a:hover {
    opacity: .8;
}

.icons-list a span {
	font-size: 14px;
	font-weight: bold;
	padding: 20px;
	display: block;
}

.icons-list .d-flex {
    align-items: flex-end;
}

.img-holder  {
    overflow: hidden;
}

.img-holder img {
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

.img-holder:hover img {
    transform: scale(1.1);
}

.solution {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-bottom: 70px;
    text-align: left;
    margin-top: 40px;
}

.solution-img, 
.solution-details {
    width: 100%;
    flex: 0 50%;
    max-width: 50%;
}

.solution-details img {
    height: 30px;
    margin-bottom: 20px;
}

.solution-img {
    margin-top: -35px;
}

.solution-details .solution-desc {
    font-size: 15px;
    line-height: 24px;
    margin-bottom: 25px;
}

.read-more {
    font-size: 18px;
    font-weight: bold;
    color: #120938;
    text-decoration: none;
}

.read-more:active, 
.read-more:hover {
    color: #F83834;
}

.big-blockquote {
    font-size: 2.5rem;
    line-height: 58px;
}

.arma-project .title {
    font-size: 1rem;
    line-height: 28px;
    padding: 15px 20px 30px;
}

.arma-project .title a {
    color: rgba(0, 0, 0, .9);
    text-decoration: none;
}

.arma-project .title a:hover, 
.arma-project .title a:active {
    color: #F83834;
}

.arma-project .img-holder {
	border-radius: 8px;
}


/* Footer */
footer {
    background-color: #120938;
    padding: 50px 0;
    color: #fff;
}

.footer-title {
    font-size: 16px;
    margin-bottom: 25px;
}

.footer-wrap {
    width: 1260px;
    margin: 0 auto;
    padding-right: 15px;
	padding-left: 15px;
	display: flex;
	justify-content: space-between;
}

.footer-list {
    list-style: none;
    margin-bottom: 0;
}

.footer-list li {
    font-size: 16px;
    line-height: 28px;
    color: rgba(255, 255, 255, .5);
}

.footer-link:active, .footer-link:hover {
    color: #fff;
}

.footer-link {
    color: rgba(255, 255, 255, .5);
    text-decoration: none;
}

/* SLick */
#arma-solutions {
    max-width: 1000px;
    margin: 0 auto 30px;
}

.slick-next:before {
    content: "\25B6";
}

.slick-prev:before {
    content: "\25C0";
}

.slick-dots li button:before {
    font-size: 14px;
    color: #fff;
}

.slick-dots li.slick-active button:before {
    color: #fff;
}

.slick-dots {
    bottom: -40px;
}

.slick-prev:before, .slick-next:before {
    font-size: 30px;
}

.slick-prev {
    left: -30px;
}

.arma-solution {
    margin: 0 15px;
}


/*Animate css transition delay*/
.wow__delay-1 {
	animation-delay: 400ms;
}
.wow__delay-2 {
	animation-delay: 600ms;
}
.wow__delay-3 {
	animation-delay: 800ms;
}
.wow__delay-4 {
	animation-delay: 1s;
}
.wow__delay-5 {
	animation-delay: 1200ms;
}

.slick-prev:before, .slick-next:before { 
    color: lightgray !important;
}



/* ===================================
Media Queries
====================================== */
@media screen and (max-width: 1440px) {
	.arma-stats .bold {
		font-size: 3rem;
	}

	.arma-stats .light {
		font-size: 3rem;
	}
}

@media (min-width: 1200px) {
	.section .container {
		max-width: 1070px;
	}
}

@media screen and (max-width: 992px) {
	.standalone-row:not(:last-child) {
		margin-bottom: 3rem;
	}

	.white-bg {
		background-color: #ffffff !important;
	}

	.upper-nav {
		position: absolute;
		left: 0;
		right: 0;
		z-index: 1;
	}

	.header-appear {
		padding-top: 6px;
		height: 70px;
		position: fixed;
		z-index: 99;
		background: rgba(19, 9, 105, 1.5);
		-webkit-animation-name: animationFade;
		animation-name: animationFade;
		-webkit-animation-duration: 1s;
		animation-duration: 1s;
		-webkit-animation-fill-mode: both;
		animation-fill-mode: both;
		-webkit-box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.35);
		box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.35);
	}

	.upper-nav-btn {
		margin-top: 12px;
	}

	.upper-nav-btn span {
		background-color: #000000;
	}

	.side-menu {
		left: 0;
		width: 100%;
		min-width: 100%;
	}

	.upper-nav .navbar-brand {
		width: 35px;
	}

	.gm-fullscreen-control {
		display: none !important;
	}

	.side-menu .side-footer .rites {
		font-size: 14px;
	}

	.side-menu .inner-wrapper {
		padding: 2.5rem 3rem 2.5rem 3rem;
	}

	/***********************************/
	/********standalone page css********/
	/***********************************/
	.standalone-row:not(:last-child) {
		margin-bottom: 8rem;
	}

	.standalone-area .sub-heading {
		margin-top: 20px;
	}

	.standalone-row:nth-child(2) .stand-img-des {
		padding-left: 18px;
		padding-right: 18px;
	}

	.standalone-row .stand-img-des {
		padding-left: 18px;
		padding-right: 18px;
	}
	/***********************************/
	/**************Custom*************/
	/***********************************/
	.page {
		padding: 10rem 15px;
	}

	.content-bloc .holder-parent {
		height: auto;
		margin: 30px 0 0;
	}

	.content-bloc .image-holder img {
		width: 100%;
		height: auto;
	}

	.content-bloc.reverse-mobile {
		flex-direction: column-reverse;
	}

	.arma-news {
		width: 85%;
	}

	.small-text-bloc {
		display: block;
	}

	.small-text-bloc .image {
		margin-bottom: 20px;
	}

	.page-banner {
		margin: 0;
		border-radius: 10px 10px 0 0;
		background-repeat: no-repeat;
		background-position: center;
	}

	.blog-title {
		border-radius: 0;
	}
	.negative-mr {
		margin-top: 0;
	}

	.content-bloc.white-bg {		
        padding: 10px 20px;
	}

	.reference img {
		padding: 0;
	}

	.reference {
		padding-top: 5px;
		padding-bottom: 5px;
	}

	.references-slider .slick-slide {
		margin: 0 10px;
		height: 110px;
	}

	.references-slider {
		margin: 20px 0;
	}

	.overlay-inner {
		background-image: url(../img/overlays/1.jpg);
		background-position: center;
	}

	.overlay-inner img {
		display: none;
	}
}
/* ... */

